--- a/mobile/RackApp/src/index.html
+++ b/mobile/RackApp/src/index.html
@@ -25,7 +25,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
-<body onload="loadApp()">
+<body>
   <app-root></app-root>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
@@ -36,7 +36,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 
-  <script>
+  <!-- <script>
     const prefersDark = window.matchMedia('(prefers-color-scheme: dark)');
 
 
@@ -60,7 +60,7 @@
     function checkToggle(shouldCheck) {
       toggle.checked = shouldCheck;
     }
-  </script>
+  </script> -->
 </body>
 
 </html>
